# mcp-redmine-oauth

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agents.md  docker-compose.yml  pyproject.toml
docs/: PLAN.md  architecture.md  plan.md  prd.md
src/: auth.py  client.py  server.py  tools.py
src/mcp_redmine_oauth/: __init__.py  auth.py  resources.py  scopes.py  server.py  tools.py
tests/: test_auth.py  test_client.py  test_resources.py  test_scopes.py  test_tools.py
