[project]
name = "mcp-redmine-oauth"
version = "0.4.0"
description = "Centrally-deployed MCP server for Redmine with OAuth 2.0 — deploy once, users authorize via Redmine"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0,<4.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.1.0",
]

[project.scripts]
mcp-redmine-oauth = "mcp_redmine_oauth.server:main"

[tool.setuptools.packages.find]
where = ["src"]
